--- a/themes/awesome/static/css/components/_admonitions.scss
+++ b/themes/awesome/static/css/components/_admonitions.scss
@@ -1,5 +1,5 @@
 .admonition {
-    border: 2px solid black;
+    border: 2px solid var(--fg);
     border-radius: 0.5rem;
 
     margin-top: 2rem;
@@ -14,6 +14,6 @@
         font-weight: 700;
         padding-top: 0.5rem;
         padding-bottom: 0.5rem;
-        border-bottom: 2px solid black;
+        border-bottom: 2px solid var(--fg);
     }
 }
