--- a/themes/awesome/static/css/components/_code.scss
+++ b/themes/awesome/static/css/components/_code.scss
@@ -15,7 +15,7 @@ li code,
 h4 code,
 kbd {
   padding: 0.05rem 0.2rem;
-  border: 1px solid c.$black;
+  border: 1px solid var(--fg);
   border-radius: 0.2rem;
 }
 
