--- a/themes/awesome/static/css/components/_header.scss
+++ b/themes/awesome/static/css/components/_header.scss
@@ -2,10 +2,7 @@
 @use "../abstracts/mixins" as m;
 
 .header {
-  border-bottom: 2px solid c.$fg--light;
-  @media (prefers-color-scheme: dark) {
-    border-bottom: 2px solid c.$fg--dark;
-  }
+  border-bottom: 2px solid var(--fg);
   padding-top: 0.5rem;
   padding-bottom: 1rem;
 
